Revision history for Test-Harness

3.15
        - After discussion with Andy, agreed to clean up the test output
          somewhat.  t/foo.....ok becomes t/foo ... ok
        - Make Bail out! die instead of exiting. Dies with the same
          message as 2.64 for (belated) backwards compatibility.
        - Alex Vaniver's patch to refactor TAP::Formatter::Console into
          a new class, TAP::Formatter::File and a common base class: 
          TAP::Formatter::Base.
        - Fix a bug where PERL5LIB might be put in the wrong spot in @INC.
          [rt.cpan.org 40257]

3.14    2008-09-13
        - Created a proper (ha!) API for prove state results and tests.
        - Added --count and --nocount options to prove to control X/Y display
          while running tests.
        - Added 'fresh' state option to run test scripts that have been
          touched since the test run.
        - fixed bug where PERL5OPT was not properly split  
        - fixed regex in _filtered_inc. Fixes #39248. Thanks Slaven.

3.13    2008-07-27
        - fixed various closure related leaks
        - made prove honour HARNESS_TIMER
        - Applied patches supplied by Alex Vandiver
          - add 'rules' switch to prove: allows parallel execution rules
            to be specified on the command line.
          - allow '**' (any path) wildcard in parallel rules
          - fix bug report address
          - make tprove_gtk example work again.

3.12    2008-06-22
        - applied Steve Purkis' huge refactoring patch which adds
          configurable factories for most of the major internal classes.
        - applied David Wheeler's patch to allow exec to be a code
          reference.
        - made tests more robust in the presence of -MFoo in PERL5OPT.

3.11    2008-06-09
        - applied Jim Keenan's patch that makes App::Prove::run return a
          rather than exit (#33609)
        - prove -r now recurses cwd rather than 't' by default (#33007)