@@ -1,8 +1,9 @@
 Revision history for Test-Harness
 
 3.15
+        - The App::Prove::State::Result::Test now stores the parser object.
         - After discussion with Andy, agreed to clean up the test output
-          somewhat.  t/foo.....ok becomes t/foo ... ok
+          somewhat.  t/foo.....ok becomes t/foo.t ... ok
         - Make Bail out! die instead of exiting. Dies with the same
           message as 2.64 for (belated) backwards compatibility.
         - Alex Vaniver's patch to refactor TAP::Formatter::Console into
